--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   --soft-orange: #FFE9D5;
   --secondary-ble: #1a91f7;
   --soft-ble: #e7f5ff;
-  --warm-black: ##201E1C;
+  --warm-black: #201E1C;
   --black: #282623;
   --grey: #bababa;
   --off-white: #FAF8F7;
@@ -39,7 +39,7 @@ header {
   height: 334px;
   text-align: center;
   background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
-  display: none;
+  /* display: none; */
 }
 
 header img {
@@ -114,6 +114,7 @@ main {
   padding-top: 80px;
   padding-bottom: 30px;
   text-align: center;
+  /* display: none; */
 }
 
 .main-exchange-container--title {
@@ -132,7 +133,7 @@ main {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: none;
+  /* display: none; */
 }
 
 .main-exchange-container--title h2 {
@@ -255,4 +256,134 @@ main {
 
 .commission-table--date {
   background-color: var(--soft-ble);
+}
+
+.main-exchange-container--title, .main-currency-table {
+  /* display: none; */
+}
+
+.main-product-detail {
+  position: relative;
+  width: 100%;
+  min-width: 320px;
+  height: auto;
+  padding: 20px 10px;
+  background-color: var(--warm-black);
+}
+
+.main-product-detail .potato {
+  position: absolute;
+  width: 40px;
+  height: 25px;
+  top: calc(0% - 12.5px);
+	left: calc(50% - 20px);
+  background-image: url('./assets/icons/patata.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.product-detail--title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 50px;
+  /* display: none; */
+}
+
+.product-detail--title h2 {
+  margin-bottom: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  text-align: center;
+  color: var(--just-white);
+}
+
+.product-detail--title > p {
+  margin: 0 auto;
+  margin-top: 24px;
+  margin-bottom: 30px;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: 500;
+  text-align: center;
+  color: #808080;
+}
+
+.product-cards--container {
+  background-color: var(--black);
+}
+
+.product-detail--card {
+  width: 90%;
+  min-width: 288px;
+  max-width: 400px;
+  height: 150px;
+  margin: 15px auto;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.icon-card {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 10px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.clock {
+  background-image: url('./assets/icons/clock1.svg');
+}
+
+.eye {
+  background-image: url('./assets/icons/eye1.svg');
+}
+
+.money {
+  background-image: url('./assets/icons/dollar-sign1.svg');
+}
+
+.check {
+  background-image: url('./assets/icons/check-circle1.svg');
+}
+
+.product--card-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  margin-bottom: 10px;
+  color: var(--just-white);
+}
+
+.product--card-body {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  color: #808080;
+}
+
+.finder {
+  width: 100%;
+  min-width: 288px;
+  max-width: 400px;
+  height: 380px;
+  text-align: center;
+  background-image: url('./assets/img/bitcoinbaby1.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.finder-title h2 {
+  padding-top: 60px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.4rem;
+  line-height: 2.6rem;
+  color: #FFFFFF;
 }
