--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,8 +25,10 @@
 }
 
 html {
+  min-width:320px;
   font-size: 62.5%;
   font-family: 'DM Sans', sans-serif;
+  scroll-behavior: smooth;
 }
 
 header {
@@ -99,7 +101,7 @@ header img {
   width: 13px;
   height: 9px;
   margin-left: 10px;
-  background-image: url('./assets/icons/dowm.svg');
+  background-image: url('../assets/icons/dowm.svg');
 }
 
 main {
@@ -129,7 +131,7 @@ main {
   height: 200px;
   margin: 0 auto;
   margin-bottom: 50px;
-  background-image: url('./assets/img/bitcoin.svg');
+  background-image: url('../assets/img/bitcoin.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -152,13 +154,36 @@ main {
   margin-bottom: 30px;
 }
 
+/* .main-commission-table {
+  margin: 50px calc(calc(100% - 310px)/2) 0 0;
+}
+
+.main-currency-table {
+  margin: 50px 0 0 calc(calc(100% - 310px)/2);
+} */
+
 .main-currency-table, .main-commission-table {
-  width: 70%;
-  min-width: 235px;
-  max-width: 500px;
-  height: 360px;
-  margin: 0 auto;
+  position: relative;
+  scroll-snap-align: center;
+  width: 100%;
+  min-width: 270px;
+  /* max-width: 300px; */
+  height: auto;
+  padding-top: 30px;
   font-family: "Inter", sans-serif;
+}
+
+.main-tables-container {
+  width: 80%;
+  min-height: 288px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  /* justify-content: center;
+  height: 400px; */
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x proximity;
 }
 
 .currency-table--title, .commission-table--title {
@@ -174,9 +199,9 @@ main {
 }
 
 .currency-table--container, .commission-table--container {
-  width: 90%;
-  min-width: 230px;
-  max-width: 300px;
+  width: 85%;
+  /* min-width: 230px;
+  max-width: 300px; */
   height: 250px;
   margin: 0 auto;
 }
@@ -222,7 +247,7 @@ main {
   width: 15px;
   height: 15px;
   margin-left: 10px;
-  background-image: url('./assets/icons/trending-down.svg');
+  background-image: url('../assets/icons/trending-down.svg');
   background-size: cover;
   background-position: center;
 }
@@ -232,7 +257,7 @@ main {
   width: 15px;
   height: 15px;
   margin-left: 10px;
-  background-image: url('./assets/icons/trending-up.svg');
+  background-image: url('../assets/icons/trending-up.svg');
   background-size: cover;
   background-position: center;
 }
@@ -268,6 +293,7 @@ main {
   min-width: 320px;
   height: auto;
   padding: 20px 10px;
+  /* display: none; */
   background-color: var(--warm-black);
 }
 
@@ -277,7 +303,7 @@ main {
   height: 25px;
   top: calc(0% - 12.5px);
 	left: calc(50% - 20px);
-  background-image: url('./assets/icons/patata.svg');
+  background-image: url('../assets/icons/patata.svg');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -312,7 +338,10 @@ main {
 }
 
 .product-cards--container {
-  background-color: var(--black);
+  width: 100%;
+  max-width: 300px;
+  min-width: 288px;
+  margin: 0 auto;
 }
 
 .product-detail--card {
@@ -323,6 +352,7 @@ main {
   margin: 15px auto;
   padding: 15px;
   border-radius: 5px;
+  background-color: var(--black);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
 }
 
@@ -336,19 +366,19 @@ main {
   background-repeat: no-repeat;
 }
 .clock {
-  background-image: url('./assets/icons/clock1.svg');
+  background-image: url('../assets/icons/clock1.svg');
 }
 
 .eye {
-  background-image: url('./assets/icons/eye1.svg');
+  background-image: url('../assets/icons/eye1.svg');
 }
 
 .money {
-  background-image: url('./assets/icons/dollar-sign1.svg');
+  background-image: url('../assets/icons/dollar-sign1.svg');
 }
 
 .check {
-  background-image: url('./assets/icons/check-circle1.svg');
+  background-image: url('../assets/icons/check-circle1.svg');
 }
 
 .product--card-title {
@@ -370,13 +400,14 @@ main {
 
 .finder {
   width: 100%;
-  min-width: 288px;
-  max-width: 400px;
-  height: 380px;
+  min-width: 320px;
+  /* max-width: 400px; */
+  height: 60vh;
   text-align: center;
-  background-image: url('./assets/img/bitcoinbaby1.jpg');
+  background-image: url('../assets/img/bitcoinbaby1.jpg');
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .finder-title h2 {
@@ -386,4 +417,193 @@ main {
   font-size: 2.4rem;
   line-height: 2.6rem;
   color: #FFFFFF;
+}
+
+.main-plans-container {
+  width: 100%;
+  min-width: 320px;
+  padding: 15px;
+  background-color: #e5e5e5;
+  text-align: center;
+  padding-bottom: 70px;
+}
+
+.plans--title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.plans--title h2 {
+  margin-top: 60px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.4rem;
+  line-height: 2.6rem;
+  color: var(--warm-black);
+}
+
+.plans--title p {
+  margin-top: 24px;
+  margin-bottom: 50px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: #757575;
+}
+
+.plans-container--card {
+  position: relative;
+  scroll-snap-align: center;
+  width: 50%;
+  min-width: 190px;
+  max-width: 270px;
+  height: auto;
+  margin: 50px 20px 0;
+  padding-top: 30px;
+  border-radius: 8px;
+  background-color: var(--just-white);
+  box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.plans-container--card > p{
+  position: absolute;
+  width: 100px;
+  height: 30px;
+  padding: 8px;
+  top: calc(0% - 15px);
+	left: calc(50% - 50px);
+  background-color: var(--bitcoin-orange);
+  border-radius: 8px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: var(--just-white);
+}
+
+.plans-container--card h3 {
+  margin-bottom: 10px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: #000000;
+}
+
+.plans-value {
+  position: relative;
+  margin-bottom: 15px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 5.2rem;
+  line-height: 6.3rem;
+  letter-spacing: -0.08em
+}
+
+.plans-container--card .plans-dollar {
+  position: absolute;
+  left: calc(50% - 40px);
+  top: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+}
+
+.plans-offer {
+  padding: 0 15px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: #757575;
+  margin-bottom: 15px;
+}
+
+.plans-container--card button {
+  width: 151px;
+  height: 48px;
+  margin-bottom: 30px;
+  background: var(--off-white);
+  border: 2px solid var(--bitcoin-orange);
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-family: "DM Sans", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: var(--warm-black);
+}
+
+.arrow {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url('../assets/icons/arrow.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  vertical-align: text-bottom;
+}
+
+.plans-container--slider {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  height: 316px;
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x proximity;
+}
+
+.plans-container--slider::-webkit-scrollbar {
+  background-color: var(--soft-orange);
+  height: 3px;
+}
+.plans-container--slider::-webkit-scrollbar-thumb {
+  background-color: var(--bitcoin-orange);
+}
+
+footer {
+  display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 150px;
+    padding-left: 10px;
+    background-color: var(--bitcoin-orange);
+}
+
+footer section {
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .left ul{
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  list-style: none;
+}
+
+.left li {
+  margin: 10px 0;
+}
+
+.left a {
+  text-decoration: none;
+  color: var(--just-white);
 }
